--- a/index.html
+++ b/index.html
@@ -9,3 +9,60 @@
     <p>Das ist meine erste Website.</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Meine Website</title>
+    <style>
+        body {
+            background-color: pink;
+            font-family: Arial, sans
+            text-align: center;
+            padding: 50px;
+        }
+
+        h1 {
+            color: white;
+            font-size: 50px;
+        }
+
+        p {
+            color: white;
+            font-size: 20px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Hallo Welt!</h1>
+    <p>Das ist meine pinke Website 💖</p>
+</body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Animation</title>
+    <style>
+        body {
+            background-color: pink;
+            text-align: center;
+            padding-top: 100px;
+        }
+
+        h1 {
+            font-size: 60px;
+            color: white;
+            animation: glitzer 1.5s infinite alternate;
+        }
+
+        @keyframes glitzer {
+            from { text-shadow: 0 0 10px white; }
+            to { text-shadow: 0 0 30px hotpink; }
+        }
+    </style>
+</head>
+<body>
+    <h1>✨ Meine Glitzer-Website ✨</h1>
+</body>
+</html>
