--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Meine Website</title>
 </head>
 <body>
-    <h1>Hallo Welt!</h1>
-    <p>Das ist meine erste Website.</p>
+    <h1>alohaa!</h1>
+    <p>ich bin jetti schön das ihr mich besuchen kommt</p>
 </body>
 </html>
 <!DOCTYPE html>
@@ -34,8 +34,8 @@
     </style>
 </head>
 <body>
-    <h1>Hallo Welt!</h1>
-    <p>Das ist meine pinke Website 💖</p>
+    <h1>was euch erwartet</h1>
+    <p>hier lade ich meine aktuellen projekte hoch und alles was in meinem leben so passiert 💖</p>
 </body>
 </html>
 <!DOCTYPE html>
