index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -66,4 +66,5 @@
     <h1>✨✨</h1>
 </body>
 </html>
-<img src="jpeg" alt="Mein Bild">
+<h2>Das bin ich</h2>
+<img src="4b7959e6-fa75-47cf-9cf4-526df2e81805. jpeg" alt="das bin ich">
