index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -71,4 +71,4 @@
 <img src="4b7959e6-fa75-47cf-9cf4-526df2e81805.jpeg" alt="Bild">
 </body>
 </html>
-<img src="pfad/zum/bild.png" width="200" height="200">
+<img src="4b7959e6-fa75-47cf-9cf4-526df2e81805.jpeg" width="200" height="200">
