--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
 </html>
 <h2>Das bin ich</h2>
 
-<img src="4b7959e6-fa75-47cf-9cf4-526df2e81805.jpeg" alt="Bild">
+<img src="4b7959e6-fa75-47cf-9cf4-526df2e81805.jpeg" width="200" height="200" alt="Bild">
 </body>
 </html>
-<img src="4b7959e6-fa75-47cf-9cf4-526df2e81805.jpeg" width="200" height="200">
