--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <h1>✨✨</h1>
 </body>
 </html>
-<span style="color:hot pink">Das bin ich </span>
+<h2>Das bin ich </h2>
 
 <img src="4b7959e6-fa75-47cf-9cf4-526df2e81805.jpeg" width="400" height="400" alt="Bild">
 </body>
