index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
 </body>
 </html>
 <h2>Das bin ich </h2>
+<html>
+    <body>
+        <style>
+        body
 
-<img src="4b7959e6-fa75-47cf-9cf4-526df2e81805.jpeg" width="400" height="400" alt="Bild">
+<img src="4b7959e6-fa75-47cf-9cf4-526df2e81805.jpeg" width="400" height="500" alt="Bild">
 </body>
 </html>
